react-app/src/components/reviews/elements/reviewCard.css
.review-card-container {
  margin: 15px 45px;
  width: 40%;
}

.review-heading {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.review-title {
  padding-left: 5px;
}

#user-avatar {
  margin-top: 10px;
  width: 50px;
  height: auto;
  border-radius: 50%;
  padding: 0 10px 0 2px;
}

#review-username {
  font-size: 18px;
  font-weight: 500;
  word-wrap: break-all !important;
  overflow-wrap: break-word !important;
  hyphens: auto !important;
  width: 99%;
}

#nice-date {
  color: rgb(72, 72, 72);
  font-size: 13px;
}

.review-single-rating {
  margin-left: 60%;
  font-size: 18px;
}

#review-blurb {
  padding: 10px 2px;
  word-wrap: break-all;
  overflow-wrap: break-word;
  hyphens: auto;
}

.little-button {
  margin: 0 3px;
  width: 125px;
  height: 35px;
  font-size: 14px;
  font-weight: 500;
  background-color: white;
  border-radius: 8px;
  border: 1px solid black;
}

.little-button:hover {
  background-color: rgb(244, 244, 244);
}

@media only screen and (max-width: 550px) {
  #review-username {
    font-size: 18px;
    font-weight: 500;
    word-wrap: break-all !important;
    overflow-wrap: break-word !important;
    hyphens: auto !important;
    width: 220px;
  }
}

